--- a/views/partials/boards/show/buttons.ejs
+++ b/views/partials/boards/show/buttons.ejs
@@ -1,16 +1,17 @@
 <div class="mt-3">
   <a class="btn btn-primary" href="/boards/<%= boardName %>">Back</a>
   <% if(isAuthenticated && post.author && currentUser.id == post.author.id){ %>
-  <a class="btn btn-primary" href="/boards/<%= boardName + '/' + post._id %>/edit">Edit</a>
+  <a class="btn btn-primary" href="/boards/<%= boardName %>/<%= post._id %>/edit">Edit</a>
 
   <form action="/boards/<%= boardName + '/' + post._id %>?_method=delete" method="post" class="d-inline">
     <a class="btn btn-primary" href="#" onclick="confirm('Do you want to delete this?')?this.parentElement.submit():null;">Delete</a>
   </form>
   <% } %>
-  <% console.log('@buttons') %>
-  <% console.log(' liked = ' + liked) %>
   <form action="/boards/<%= boardName + '/' + post._id+'/likes'%>?_method=post" method="post" class="d-inline">
     <a class="btn btn-primary <%= liked?'disabled':'' %>" href="#" onclick="this.parentElement.submit()">Likes</a>
+    <% if(boardName === 'trades'){ %>
+      <a class="btn btn-primary" href="/dm/<%= post.author.username %>/show">Chat</a>
+    <% } %>
     <!-- class="btn btn-primary " -->
   </form>
 </div>
