--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,4 +1,3 @@
-
 <html>
 <script src='https://kit.fontawesome.com/a076d05399.js'></script>
 <nav class="navbar navbar-expand-sm navbar-light bg-light mb-3">
@@ -18,21 +17,25 @@
 
       </ul>
       <ul class="navbar-nav ml-auto">
-          <% if(isAuthenticated){ %> <!-- 1 -->
-          <li><a href="/dm/" class="nav-link"><!--message-->
+        <% if(isAuthenticated){ %>
+        <!-- 1 -->
+        <li><a href="/dm/" class="nav-link">
+            <!--message-->
             <i class='far fa-comment-dots' style='font-size:24px'></i>
-          <span class="button__badge">2</span><!--have to changeto chat.length-->
+            <span class="button__badge">2</span>
+            <!--have to changeto chat.length-->
           </a>
         </li>
-            <li class="nav-item"><a href="/users/<%= currentUser.username %>" class="nav-link">My Account</a></li>
-            <li class="nav-item"><a href="/logout" class="nav-link">로그아웃</a></li>
+        <li class="nav-item"><a href="/users/<%= currentUser.username %>" class="nav-link">My Account</a></li>
+        <li class="nav-item"><a href="/logout" class="nav-link">로그아웃</a></li>
 
-          <% } else { %>
-            <li class="nav-item"><a href="/users/new" class="nav-link">회원가입</a></li>
-            <li class="nav-item"><a href="/login" class="nav-link">로그인</a></li>
-          <% } %>
-        </ul>
+        <% } else { %>
+        <li class="nav-item"><a href="/users/new" class="nav-link">회원가입</a></li>
+        <li class="nav-item"><a href="/login" class="nav-link">로그인</a></li>
+        <% } %>
+      </ul>
     </div>
   </div>
 </nav>
+
 </html>
