--- a/views/boards/notices/index.ejs
+++ b/views/boards/notices/index.ejs
@@ -12,6 +12,8 @@
 
     <h2 class="mb-3">공지사항</h2>
 
+    <small>관리자만 게시글을 쓸 수 있습니다. 댓글은 쓸 수 있어요!</small>
+
     <%- include('../../partials/boards/index/board-table') %>
 
   <div class="row mb-3">
